Fix media queris align

--- a/css/style.css
+++ b/css/style.css
@@ -354,9 +354,10 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     margin-top: 120px;
+    margin-right: 0px;
   }
 }
 
